[package]
name = "syslinux-conf"
description = "Parser for syslinux configuration files"
homepage = "https://github.com/im-0/syslinux-conf"
repository = "https://github.com/im-0/syslinux-conf"
version = "0.0.1"
authors = [ "Ivan Mironov <mironov.ivan@gmail.com>" ]
license = "LGPL-3.0+"
build = "build.rs"

[lib]
name = "syslinux_conf"
path = "src/lib/lib.rs"

[build-dependencies]
syntex = "*"
serde_codegen = "*"

[dependencies]
nom = "*"
custom_derive = "*"
enum_derive = "*"
serde = "*"
log = "*"
env_logger = "*"

[dependencies.linked-hash-map]
version = "*"
features = [ "serde_impl" ]

[dependencies.serde_json]
version = "*"
features = [ "preserve_order" ]

[dependencies.clap]
version = "*"
features = [ "suggestions", "color" ]
